src2/rsmt-hipified/log_run_bench.err
main.cu:35:5: error: use of undeclared identifier '__syncwarp'; did you mean '__sync_swap'?
   35 |     __syncwarp();
      |     ^~~~~~~~~~
      |     __sync_swap
main.cu:35:5: note: '__sync_swap' declared here
main.cu:35:16: error: too few arguments to function call, expected at least 1, have 0
   35 |     __syncwarp();
      |     ~~~~~~~~~~ ^
main.cu:39:5: error: use of undeclared identifier '__syncwarp'; did you mean '__sync_swap'?
   39 |     __syncwarp();
      |     ^~~~~~~~~~
      |     __sync_swap
main.cu:35:5: note: '__sync_swap' declared here
   35 |     __syncwarp();
      |     ^
main.cu:39:16: error: too few arguments to function call, expected at least 1, have 0
   39 |     __syncwarp();
      |     ~~~~~~~~~~ ^
main.cu:54:5: error: use of undeclared identifier '__syncwarp'; did you mean '__sync_swap'?
   54 |     __syncwarp();
      |     ^~~~~~~~~~
      |     __sync_swap
main.cu:35:5: note: '__sync_swap' declared here
   35 |     __syncwarp();
      |     ^
main.cu:54:16: error: too few arguments to function call, expected at least 1, have 0
   54 |     __syncwarp();
      |     ~~~~~~~~~~ ^
main.cu:85:3: error: use of undeclared identifier '__syncwarp'; did you mean '__sync_swap'?
   85 |   __syncwarp();
      |   ^~~~~~~~~~
      |   __sync_swap
main.cu:35:5: note: '__sync_swap' declared here
   35 |     __syncwarp();
      |     ^
main.cu:85:14: error: too few arguments to function call, expected at least 1, have 0
   85 |   __syncwarp();
      |   ~~~~~~~~~~ ^
main.cu:99:3: error: use of undeclared identifier '__syncwarp'; did you mean '__sync_swap'?
   99 |   __syncwarp();
      |   ^~~~~~~~~~
      |   __sync_swap
main.cu:35:5: note: '__sync_swap' declared here
   35 |     __syncwarp();
      |     ^
main.cu:99:14: error: too few arguments to function call, expected at least 1, have 0
   99 |   __syncwarp();
      |   ~~~~~~~~~~ ^
main.cu:127:3: error: use of undeclared identifier '__syncwarp'; did you mean '__sync_swap'?
  127 |   __syncwarp();
      |   ^~~~~~~~~~
      |   __sync_swap
main.cu:35:5: note: '__sync_swap' declared here
   35 |     __syncwarp();
      |     ^
main.cu:127:14: error: too few arguments to function call, expected at least 1, have 0
  127 |   __syncwarp();
      |   ~~~~~~~~~~ ^
main.cu:129:22: error: use of undeclared identifier '__any_sync'
  129 |   for (ID e1 = lane; __any_sync(0xffffffff, e1 < top - 2); e1 += WS) {
      |                      ^
main.cu:157:21: error: use of undeclared identifier '__ballot_sync'
  157 |     const int bal = __ballot_sync(0xffffffff, insert);
      |                     ^
main.cu:166:10: error: use of undeclared identifier '__any_sync'
  166 |   return __any_sync(0xffffffff, updated);
      |          ^
main.cu:203:22: error: use of undeclared identifier '__shfl_sync'
  203 |     const ctype x1 = __shfl_sync(0xffffffff, x0, 1);
      |                      ^
main.cu:204:22: error: use of undeclared identifier '__shfl_sync'
  204 |     const ctype y1 = __shfl_sync(0xffffffff, y0, 1);
      |                      ^
main.cu:205:22: error: use of undeclared identifier '__shfl_sync'
  205 |     const ctype x2 = __shfl_sync(0xffffffff, x0, 2);
      |                      ^
main.cu:206:22: error: use of undeclared identifier '__shfl_sync'
  206 |     const ctype y2 = __shfl_sync(0xffffffff, y0, 2);
      |                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated when compiling for gfx90a.
failed to execute:/opt/rocm-6.2.0/lib/llvm/bin/clang++  --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a  -std=c++14 -Wall -O3 -c -x hip main.cu -o "main.o"
make: *** [Makefile.AMD:50: main.o] Error 1
